--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -31,7 +31,7 @@
         </button>
 
         <!-- Menu Navigasi untuk Desktop -->
-        <ul class="hidden lg:flex lg:space-x-6">
+        <ul class="hidden lg:flex lg:space-x-6 justify-between">
             <li>
                 <a
                     href="/openweather"
@@ -129,6 +129,29 @@
                         ></path>
                     </svg>
                     Occupancy
+                </a>
+            </li>
+            <li>
+                <a
+                    href="/insight"
+                    class="flex items-center text-black transition duration-300 hover:text-gray-300"
+                >
+                    <!-- Ikon untuk Insight -->
+                    <svg
+                        class="w-6 h-6 mr-2"
+                        fill="none"
+                        stroke="currentColor"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M12 3a6 6 0 00-6 6c0 2.042 1.167 3.796 2.857 4.708A2 2 0 009 16h6a2 2 0 00.143-2.292A6.003 6.003 0 0018 9a6 6 0 00-6-6zM9 20h6m-3-4v4"
+                        ></path>
+                    </svg>
+                    Insight
                 </a>
             </li>
         </ul>
@@ -278,6 +301,26 @@
                             ></path>
                         </svg>
                         Occupancy
+                    </a>
+                </li>
+                <li>
+                    <a
+                        href="/insight"
+                        class="flex items-center text-xl text-black transition duration-300 hover:text-gray-300"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="16"
+                            height="16"
+                            fill="currentColor"
+                            class="mr-2 bi bi-thermometer-low"
+                            viewBox="0 0 16 16"
+                        >
+                            <path
+                                d="M12 3a6 6 0 00-6 6c0 2.042 1.167 3.796 2.857 4.708A2 2 0 009 16h6a2 2 0 00.143-2.292A6.003 6.003 0 0018 9a6 6 0 00-6-6zM9 20h6m-3-4v4"
+                            />
+                        </svg>
+                        Insight
                     </a>
                 </li>
             </ul>
